Updated colors, fixed viewing on mobile devices

--- a/public/css/gamePage.css
+++ b/public/css/gamePage.css
@@ -2,6 +2,7 @@ body {
     background-color: #333333;
     font-family: 'Titillium Web', sans-serif;
     height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     margin: 0;
 }
 
@@ -34,7 +35,7 @@ body {
 }
 
 #highScore {
-    color: white;
+    color: #EAAA00;
     font-size: 25px;
 }
 
@@ -72,6 +73,10 @@ body {
 
 .sequenceButton:hover {
     cursor: pointer;
+}
+
+.sequenceButton:focus {
+    outline: none;
 }
 
 .sequenceButton {
